animation overflow issue solved 2/2: kleurborder nu ook in orde, navigation overflow issue solved

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -75,7 +75,20 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: transparent;
-    border: 20px solid yellow;
+    border: 20px solid #e7e7e7;
+}
+
+.bg_border_2 {
+    box-sizing: border-box;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: calc(100vw - 40px);
+    height: calc(100vh - 40px);
+    background-color: transparent;
+    border: 3px solid transparent;
+    border-image: linear-gradient(0deg, #9b0408 0%, #9b0408 50%, #084e96 50%, #084e96 100%);
+    border-image-slice: 1;
 }
 
 /*
